--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html lang="en">
 <head>
-	<title>EndGam - Gaming Magazine Template</title>
+	<title>EndGame-Игровой новостной портал</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="EndGam Gaming Magazine Template">
 	<meta name="keywords" content="endGam,gGaming, magazine, html">
